<resources>
    <string name="app_name">Sudoku</string>
    <string name="solve_me">Solve Me!</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
</resources>
