<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_gray_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:contentDescription="@null"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/llBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSolveMe"
        style="@style/ButtonGreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/solve_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnSolveMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnClear"
            style="@style/ButtonLightOrange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />

        <Button
            android:id="@+id/btnClearAll"
            style="@style/ButtonDarkOrange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_all" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/llClear">

        <TextView
            android:id="@+id/tvOne"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/num_1" />

        <TextView
            android:id="@+id/tvTwo"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/num_2" />

        <TextView
            android:id="@+id/tvThree"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/num_3" />

        <TextView
            android:id="@+id/tvFour"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/num_4" />

        <TextView
            android:id="@+id/tvFive"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/num_5" />

        <TextView
            android:id="@+id/tvSix"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/num_6" />

        <TextView
            android:id="@+id/tvSeven"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/num_7" />

        <TextView
            android:id="@+id/tvEight"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/num_8" />

        <TextView
            android:id="@+id/tvNine"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/num_9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/llNumbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.zuhriyansauqi.sudoku.view.custom.SudokuBoardView
            android:id="@+id/sudokuBoardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>